--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "npm run export",
     "start": "next start",
-    "export": "npm run build && next export"
+    "export": "next build && next export"
   },
   "keywords": [],
   "author": "",
