--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -20,3 +20,11 @@ collections:
           fields:
             - { label: "Name", name: "name", widget: "string"}
             - { label: "Description", name: "description", widget: "text"}
+            - { label: "url", name: "url", widget: "text"}
+        - label: 'Dogs'
+          name: "dogs"
+          widget: list
+          fields:
+            - { label: "Name", name: "name", widget: "string"}
+            - { label: "Description", name: "description", widget: "text"}
+            - { label: "url", name: "url", widget: "text"}
